2003-08-10  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el: Update copyright notice and
	maintainer name.  Improve comment on stale match tests.

2003-06-01  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.14 "cassava" is released.

2003-05-10  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.13 "cauliflower" is released.

2003-05-09  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el (replace-match): Revert test to Assert
	that registers are preserved on a failed match.
	(stale match data): Test for preserve-on-failure behavior.

2003-04-24  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.12 "carrot" is released.

2003-04-23  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/test-harness.el (test-harness-risk-infloops):
	New variable.

	* automated/lisp-tests.el (split-string): Add tests for new API
	spec.  Conditionally re-enable potential infloops.

2003-04-17  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el (stale match data): Update comment.
	(replace-match): Check-Error after failed match.

2003-04-15  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/test-harness.el (test-harness-known-bug): Deleted.
	(test-harness-failure-tag, test-harness-success-tag): New variables.
	(Known-Bug-Expect-Failure): Bind them.
	(Implementation-Incomplete-Expect-Failure): New macro. Bind *-tag.
	(Print-Failure, Print-Pass): Use *-tag instead of literal strings.

	* automated/symbol-tests.el (weak reference uniqueness): Mike sez
	tests of garbage collector are due to incomplete descriptorization
	of lisp types.  Tag with Implementation-Incomplete-Expect-Failure
	if KKCC.

2003-04-03  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el: Change known-bug status of Mule ranges.

2003-03-21  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el: Change known-bug status of "\\b".

2003-02-21  Stephen J. Turnbull  <stephen@xemacs.org>
